# sparse-gaussian-histograms

./: LICENSE  README.md  requirements.txt
notebooks/: experiments.ipynb  previous-work.ipynb
notebooks/old/: GSHM_figures.R  skatchbook.ipynb
sparse-gaussian-histograms/: Makefile  README.md  pyproject.toml
sparse-gaussian-histograms/notebooks/: previous-work.ipynb
src/main/: GSHM.py
src/main/hist/: cgshm.py  gshm.py
src/main/util/: funs.py  ioutils.py  logging_utils.py
src/main/visualization/: plotting.py
src/test/: test_gshm.py
